// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IplDialogTitle matches snapshot 1`] = `
"<div class="ipl-dialog-title"><span class="ipl-dialog-title__title-text">Cool Dialog</span><button data-test="close-button" class="close-icon">
    <font-awesome-icon-stub icon="times" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub>
  </button></div>"
`;

exports[`IplDialogTitle matches snapshot when closing is disabled 1`] = `
"<div class="ipl-dialog-title"><span class="ipl-dialog-title__title-text">Cool Dialog</span><button data-test="close-button" class="close-icon" disabled="">
    <font-awesome-icon-stub icon="times" border="false" fixedwidth="false" flip="false" listitem="false" pulse="false" swapopacity="false" spin="false" symbol="false" inverse="false" bounce="false" shake="false" beat="false" fade="false" beatfade="false" flash="false" spinpulse="false" spinreverse="false"></font-awesome-icon-stub>
  </button></div>"
`;
